public/style.css
.centered {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  justify-content: center;
}

.scrollable {
  height: auto;
  max-height: 80vh;
  overflow: auto;
}

ul {
  list-style: none;
}

body {
  background-image: url('/public/img/example-image.jpg');
  background-repeat: no-repeat;
  background-size: cover;
}

#user-interface {
  background-color: rgba(191, 175, 57, 0.766);
  width: 70%;
  height: 70%;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50px;
  font-size: 17px;
  font-family: Arial, Helvetica, sans-serif;
}
#start-quiz-button {
  width: 8rem;
  padding: 0.4rem;
  font-size: 1rem;
  font-weight: bold;
  border-radius: 15px;
  border-style: hidden;
  background-color: #d8457be7;
}
#start-quiz-button:hover {
  background-color: #dbcdd2e7;
}

#answers-list {
  flex-wrap: wrap;
  justify-content: space-between;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  max-width: 900px;
  margin: 0 auto;
  padding: 40px;
  margin-bottom: 10px;
}

button {
  width: 100%;
  border: 2px solid #ccc;
  border-radius: 8px;
  box-sizing: border-box;
  text-align: center;
  position: relative;
  cursor: pointer;
  margin: 10px;
  padding: 15px;
  background-color: #efeeda;
  transition: background-color 0.3 ease;
  justify-content: left;
  display: flex;
}

button:hover {
  background-color: #d87a9ce7;
}

button > span {
  text-transform: uppercase;
  padding-right: 0.5rem;
}

#next-question-button {
  background-color: rgb(226, 224, 202);
  width: 9rem;
  padding: 0.8rem;
  font-size: 0.9rem;
  font-weight: bold;
  font-style: italic;
  border-radius: 13px;
  border-style: hidden;
  background-color: #cd658be7;
}
#next-question-button:hover {
  background-color: #da316fe7;
}

.correct-answer {
  background-color: rgb(175, 234, 175);
  color: black;
  font-weight: 600;
}

.wrong-answer {
  background-color: #d87a9ce7;
  color: black;
}

